tests/type_errors/scanl_return_type_mismatch.nos
# expect_error: type mismatch
# scanl lambda must return the same type as the accumulator
# Here: init is Int but lambda returns String
main() = [1, 2, 3].scanl(0, (acc, x) => show(acc))
